# CaGE

./: CMakeLists.txt  LICENSE  README.md  game.cpp
Resource/: menu.grconf  resource.json  script.grs
Resource/素材设计/: start.psd  按钮模板设计基本-01.psd
include/: Game.h  Intro.h  Menu.h
include/CaGE/: Background.h  Button.h  CaGE.h  EventManager.h  Log.h  Message.h  Particle.h  Playable.h  RenderObject.h  Resource.h  ResourceManager.h  ResourcePackage.h  Texture.h  Vector2D.h
src/: Background.cpp  Button.cpp  CMakeLists.txt  CaGE.cpp  EventManager.cpp  Game.cpp  Intro.cpp  Log.cpp  Menu.cpp  Particle.cpp  RenderObject.cpp  Resource.cpp  ResourceManager.cpp  TO_BE_DONE.c_back  Texture.cpp
src/tools/: CMakeLists.txt  FileGenerator.cpp
